--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <img src="assets/images/phone_img.png" alt="phone"></a>
                 </div>
                 <div class="phone__p__block">
-                    <p class="phone_p">Свяжитесь с нами!</p>
+                    <p class="phone_p">+7 (3812) 48-46-47</p>
                 </div>
             </div>
             <div class="logo_box">
@@ -239,7 +239,7 @@
                             <img src="assets/images/phone_img.png" alt="phone"></a>
                     </div>
                     <div class="phone__p__block">
-                        <p class="phone_p">Свяжитесь с нами!</p>
+                        <p class="phone_p">+7 (3812) 48-46-47</p>
                     </div>
                 </div>
                 <div class="marker__block">
